err/spacegrids.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/spacegrids'...
Compiling './lib/python3.5/site-packages/spacegrids/_iosg.py'...
***   File "./lib/python3.5/site-packages/spacegrids/_iosg.py", line 33
    print 'Using Scientific.IO.NetCDF'
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/spacegrids/abstract.py'...
***   File "./lib/python3.5/site-packages/spacegrids/abstract.py", line 755
    print "Message from eq_perm: inputs must be of equal length."
                                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/spacegrids/expercls.py'...
***   File "./lib/python3.5/site-packages/spacegrids/expercls.py", line 89
    print REP.value
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/spacegrids/fieldcls.py'...
***   File "./lib/python3.5/site-packages/spacegrids/fieldcls.py", line 462
    print '+ only implemented for self-dual Coord objects (e.g. time), returning None.'
                                                                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/spacegrids/projectcls.py'...
***   File "./lib/python3.5/site-packages/spacegrids/projectcls.py", line 144
    print 'Adding: ',
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/spacegrids/utilsg.py'...
***   File "./lib/python3.5/site-packages/spacegrids/utilsg.py", line 428
    print 'provide equal length'
                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/spacegrids-1.9.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
